--- a/index.html
+++ b/index.html
@@ -3,43 +3,96 @@
 	<head>
 
 		<meta charset="utf-8" />
-		<title>地科设计</title>
+		<title>红色旅游线路规划</title>
 	  	<link rel="stylesheet" href="reveal.css">	
 		<script src="jquery-1.4.4.min.js"></script>
 		<script type="text/javascript" src="jquery.reveal.js"></script>
 		<style type="text/css">
-			*{margin: 0 auto;}
+			*{margin: 0 auto; background: #BF0A10;}
 			body { font-family: 微软雅黑; }
 			.big-link { display:block; margin-top: 100px; text-align: center; font-size: 70px; color: #06f; }
 			area{outline: none}
-			.main { width: 1440px; margin: 0 auto;}
-			.pic {  width: 860px; margin: 0 auto;}
-			.tit {font-size: 24px; margin: 0 auto; width: 860px; margin-top: 25px;}
+			.main { width: 1100px; margin: 0 auto; background: #B87333; height: 560px; padding-top: 70px; border-radius: 14px;}
+			.pic {  width: 670px; margin: 0 auto;}
+			.tit {font-size: 34px; margin: 0 auto;  margin-top: 25px; width: 680px; text-align: center; margin-bottom: 24px; color:#E9F01D}
 		</style>
 	</head>
 
 	<body>
-
+	<p class="tit">溯源豫鄂边，家国赤子情----</br>豫鄂边区红色旅游线路规划助推“乡村振兴”</p>
 	<div class="main">
-		<p class="tit"> 春春大佬的地图设计 </p>
+		
 		<div class="pic">
-			<img src="hb.jpg" border="0" usemap="#planetmap" alt="Planets" width="860" height="600" />
+			<img src="zt2.jpg" border="0" usemap="#planetmap" alt="Planets" width="670" height="516" />
  				<map  name="planetmap">
-    		 		<area shape="circle" coords="620,388,20" href ="#" data-reveal-id="hb">
-					<area shape="circle" coords="379,228,20"  href ="#"  data-reveal-id="xy" />
+    		 		<area shape="circle" coords="457,192,20" href ="#" data-reveal-id="qs">
+					<area shape="circle" coords="460,258,20"  href ="#"  data-reveal-id="sh" />
+<area shape="circle" coords="518,270,20"  href ="#"  data-reveal-id="xx" />
+<area shape="circle" coords="550,255,20"  href ="#"  data-reveal-id="sc" />
+<area shape="circle" coords="460,303,20"  href ="#"  data-reveal-id="dw" />
+<area shape="circle" coords="499,325,20"  href ="#"  data-reveal-id="ha" />
+<area shape="circle" coords="473,414,20"  href ="#"  data-reveal-id="wh" />
+<area shape="circle" coords="319,436,20"  href ="#"  data-reveal-id="jz" />
+
     			</map>
 		</div>
-		<div id="hb" class="reveal-modal">
-			<h1>武汉</h1>
-			<p>武汉是个好地方</p>
+		<div id="sh" class="reveal-modal">
+			<h1>信阳市浉河区红色旅游简介</h1>
+			<p>四望山位于信阳市浉河区西南40公里处。地处豫鄂两省边陲的桐柏山、大别山之间，为桐柏山脉进入信阳的第一高峰，主峰海拔906.4米，登峰顶可望河南省的信阳、桐柏和湖北省的随州、应山四个县（市），故名“四望山”这里地处豫鄂两省边区大别山与桐柏山的结合部，扼制南北交通的险关要隘，素有河南省的“南大门”之称，战略地位险要。“红色四望山”是信阳革命老区28年红旗不倒的标志，在长期的革命斗争中，以四望山为中心的红色区域留下了大量的革命遗址和宝贵的革命历史文化资源，在发展红色旅游上具有巨大的潜力。目前被确定为省级红色旅游线路图景点的有5处，被确定为市级红色旅游线路图景点的有11处。</p>
 			<a class="close-reveal-modal">&#215;</a>
 		</div>
 		
-		<div id="xy" class="reveal-modal" >
-			<h1>襄阳</h1>
-			<p>襄阳是个好地方</p>
+		<div id="qs" class="reveal-modal" >
+			<h1>确山县红色旅游简介</h1>
+			<p>确山竹沟革命纪念馆位于竹沟镇中心延安街北侧，占地面积5000平方米。馆内有旧址房屋54间，竹沟革命史陈列大厅1座。珍藏有定级革命文物231件，其它实物、文献、图片近千件。馆内景点主要有：中共中央中原局、中共河南省委、新四军四支队八团队各机关和刘少奇办公室，李先念办公室，彭雪枫办公室等旧址和竹沟军政教导大队、豫鄂边军事会议旧址及陈列厅等。1988年8月，被国务院批准为全国重点文物保护单位，1997年5月被河南省首批命名为革命传统教育基地。1998年11月8日，确山县投资兴建的新展厅落成，河南省委、省政府在竹沟隆重召开了“中共中央中原局成立60周年暨刘少奇同志诞辰100周年纪念大会”，刘少奇夫人王光美、李先念夫人林佳楣、原省委书记马忠臣、省长李克强等省、市、县党政军领导、老区军民4万多人参加了纪念大会。1995年6月10日，朱镕基总理亲临该馆参观。新展厅对外开放以来，年均接待省内外参观游人5万多人次。</p>
+			<a class="close-reveal-modal">&#215;</a>
+</div>
+		<div id="dw" class="reveal-modal">
+			<h1>大悟县红色旅游简介</h1>
+			<p>蒋家楼子</p>
+<p>蒋家楼子位于大悟县阳平镇中秋村南5公里的崇山峻岭中，重要的红色旅游地。原名黄家楼子，清朝中期，蒋姓从滠水河口搬迁而至，重建徽派高楼，并改称蒋家楼子。1943年，鄂豫边区党委大会就在此楼召开，成为新四军第五师历史上最著名的“蒋家楼子会议”，是我党历史上的一次重要转折点。岁月沧桑，古地尘封。2016年，国家拨出巨资，修葺一新，蒋家楼子由此焕发出新时代的勃勃生机。</p>
+<p>金岭村</p>
+<p>金岭村位于湖北省孝感市大悟县新城镇东北，湖北省美丽乡村示范村。它是集小张湾鄂北传统民居群、黄金沟非遗文化体验区、观星谷汽车露营地、精品民宿接待和农业观光体验为一体的休闲旅游乡村。幽静的田园风光，开国大将徐海东故里，淳朴的民风乡情，多彩的乡村文化，招徕来自全国各地的游客。</p>
+			<a class="close-reveal-modal">&#215;</a>
+		
+</div>
+		<div id="xx" class="reveal-modal">
+			<h1>新县红色旅游简介</h1>
+			<p>新县是黄麻起义的策源地，是鄂豫皖苏区首府所在地，是坚持大别山红旗不倒的中心地，是刘邓大军千里跃进大别山的落脚地，是鄂豫皖革命根据地的核心地。新县的土地是红色的土地，新县的人民是英雄的人民。新县每一寸山峦就是一座伟岸的丰碑， 每一处遗迹就是一部英雄传奇。 新县在鄂豫皖革命史和中国革命史上具有不可替代的地位和作用据初步统计，新县红色旅游资源在全国和鄂豫皖三省有30个第一，其中的五个全国第一和十个鄂豫皖三省第一，红色旅游资源丰富。新县素以峰秀、水清、石怪、洞幽、庙古、松奇、花盛著称，是观赏自然风光、返璞归真的理想胜地。且新县有四千多年的文化积淀，是历代文人骚客的记游之地，荟萃之乡。境内拥有众多关寨、寺庙、庵堂，自古以来就有”九里十八寨”之称。境内有苏河龙山文化、天亮寺新石器文化、艾洼商周文化等遗址，有豫南道教圣，地金兰山、道教名山天台山等。民俗文化古朴多姿，耍龙灯、舞旱船、节日饮食丰富多彩。在革命时期，生活在山区的农民常常以山歌、民谣抒发对党和红军的热爱。其中，脍炙人口的革命歌曲《八月桂花遍地开》、  《送郎当红军》等就是从新县柴山保革命根据地唱遍全国的。</p>
+			<a class="close-reveal-modal">&#215;</a>
+		
+</div>
+		<div id="ha" class="reveal-modal">
+			<h1>红安县红色旅游简介</h1>
+<p>黄麻起义鄂豫皖苏区革命烈士陵园</p>
+			<p>黄麻起义鄂豫皖苏区革命烈士陵园是一座为了纪念在黄麻起义和鄂豫皖苏区革命斗争中牺牲先烈们的革命烈士陵园，在原红安烈士陵园的基础上扩建而成，始建于1956年，1980年全部建成，1990年扩建。烈士陵园位于湖北省黄冈市红安县城关镇陵园大道，1989年被国务院列为重点烈士陵园保护单位，陵园面积约1平方公里，由牌坊、纪念碑、烈士祠、烈士纪念馆、烈士墓、骨灰堂和园林等组成。陵园内有黄麻起义和鄂豫皖苏区革命烈士纪念馆、将军馆、董必武纪念馆、李先念纪念馆、历史纪念馆等纪念馆建筑，收藏黄麻起义和鄂豫皖苏区各类文献、文物文物700余件，是研究地方武装斗争史及鄂豫皖红四方面军人物战斗历程的一个革命史综合馆。</p>
+<p>七里坪革命遗址群</p>
+<p>七里坪革命遗址群是国家重点文物保护单位。遗址群里有黄麻起义遗址、长胜街革命遗址群、鄂豫皖特区苏维埃政府旧址、鄂豫皖特区革命军事委员会旧址、红四方面军诞生地等20处。长胜街380米，保持了大革命时期的原貌，鄂豫皖特区苏维埃银行、黄安县苏维埃经济公社、列宁市扬殷街遗迹等一批遗迹、遗址都集中在这条街上。</p>
+			<a class="close-reveal-modal">&#215;</a>
+		
+</div>
+		<div id="wh" class="reveal-modal">
+			<h1>武汉市红色旅游简介</h1>
+			<p>红色旅游系列景区（江岸区八七会议会址纪念馆，武昌区毛泽东旧居及中央农民运动讲习所旧址纪念馆）和辛亥革命系列景区（武昌区辛亥革命武昌起义纪念馆及首义广场，江夏区中山舰纪念馆）周边景点有汉口租界、黄鹤楼、琴台、归元寺、武汉动物园、墨水湖、龟山、晴川阁、东湖、龙泉山风景区、湖北省博物馆、武汉江汉路、武汉大学等。武汉市红色旅游系列景区(点)大多地处城市中心区，其中武昌中央农民运动讲习所旧址、毛泽东旧居及八七会议会址纳入了国家100个红色旅游景区规划范围，早已成为对外开放的旅游景点，并充分利用自身条件，组织形式多样的专题展览。武汉市政府已通过旅游发展基金等多种方式加大资金投入，重点打造“中央农民运动讲习所旧址”、“八七会议会址(含武汉八路军办事处旧址)”、“二七纪念馆”三大红色旅游基地，努力培育“施洋烈士陵园”、“红色战士公墓”两处革命先烈缅怀圣地和黄陂“新四军第五师司政机关旧址”红色旅游景区。</p>
+			<a class="close-reveal-modal">&#215;</a>
+		
+</div>
+		<div id="jz" class="reveal-modal">
+			<h1>荆州市公安县红色旅游简介</h1>
+			<p>荆江分洪工程主要景点拦淤堤、预埋炸药现场、总理讲话纪念碑、6号启闭闸演示现场、分洪工程纪念碑、观音矶、万寿宝塔等。北闸主要景区设施：北闸主体建筑，布可夫槽（为减小启闸行洪时巨大水流对下游的冲击和破坏，在前苏联水利专家布可夫指导下，北闸在闸门下建了一道“消力池”，消力池之外再用巨石构筑了一道屏障，以减缓水流下泄时对行洪区的破坏。为纪念这位专家，当地人将之称为“布可夫池”），北闸启动绞车房和北闸开启演示现场，荆江分洪纪念碑、纪念亭，荆江分洪工程纪念园—北闸会议中心，“长江王”林一山种植的两株四季桂花树，荆江水文化展示的特色游步道长廊，荆州市大、中、小学校的爱国主义教育基地，驻闸部队和军训营区，游客接待中心，荆江分洪工程暨北闸工程专题陈列室，影视放映厅，拦淤堤“九八”抗洪预埋炸药分洪现场，拓展训练基地，丛林、水上休闲区，果园、农家乐休闲体验区。</p>
 			<a class="close-reveal-modal">&#215;</a>
 		</div>
+<div id="sc" class="reveal-modal">
+			<h1>商城县红色旅游简介</h1>
+			<p>金刚台红军洞群</p>
+<p>金刚台国家级地质公园位于美丽的河南省信阳市商城县东南7公里处，地处豫皖两省交界，总面积138平方公里，主要地址遗迹面积72平方公里。主要由:金刚台西河景区、金刚台猫儿峰、里罗城、东河四部分组成。园内仅千米以上的山峰就有十余座，主峰金刚台海拔为1584米，为大别山豫内最高峰，有着"光州第一峰"的美誉。金刚台由北向南，共同构绘了青山与绿水一色，奇松与怪石同在的神奇景观。金刚台西河景区是信阳市唯一一家国家级地质公园、国家AAAA级旅游景区、国家级自然保护区、国家130条红色旅游精品线路之一、河南省生态旅游区、信阳市廉政教育基地、青少年革命传统教育基地、全国百家晚报摄影基地、《八月桂花遍地开》歌曲诞生地、电影拍摄地。 金刚台西河景区是一座集地质地貌，亚热带风光，生物宝库，红色文化为一体的综合型地质公园。走进这里，既可以欣赏大自然鬼斧神工造就的瑰丽美景，游览生态茶园，又能瞻仰红色革命遗址，遥想"八月桂花遍地开"的火红年代。</p>
+<p>观音山</p>
+<p>观音山云极观，坐落在商城城关以北18公里处，河凤桥乡境内的观音山上。这里建有规模较大的道教庙宇云极观，是信阳市道教协会所在地，也是豫南山区有名的道教胜地。秦代史书称“拐杖山”，唐时称“观铁山”，后相传抗元将领余思铭在此观阵布兵，当地群众称为观阵山。明朝宣德年间，周围群众自动捐款捐物，在山顶上建了一座寺庙，内供观音像，始称“观音山”。</p>
+<p>许世友将军故里</p>
+<p>许世友将军故里（许世友将军墓）为国家AAA级旅游景区、文化旅游景点、红色旅游经典景区、爱国主义教育基地。位于河南省新县田铺乡许家洼，是代传奇名将许世友将军的出生地，也是许世友将军谢世后的安息之地。许世友将军生前赫赫的战功，特殊的个性，“忠国孝母”的情怀和传奇的人生经历，深受世人敬仰，每年吸引了国内外各界人士前来拜谒、观瞻，许世友将军故里游览区已成为大别山著名的爱国主义教育基地。</p>
+			<a class="close-reveal-modal">&#215;</a>
+		</div>
+		
 	</div>
 
 	</body>
